--- a/Savage Hotel System/Savage Hotel System/Savage Hotel System.csproj
+++ b/Savage Hotel System/Savage Hotel System/Savage Hotel System.csproj
@@ -67,6 +67,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DatabaseHotelDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Data\DataBase.cs" />
+    <Compile Include="Models\Employee.cs" />
     <Compile Include="Views\Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -75,6 +77,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\MenuMain.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\MenuMain.Designer.cs">
+      <DependentUpon>MenuMain.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -83,9 +91,13 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="Views\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\MenuMain.resx">
+      <DependentUpon>MenuMain.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="DatabaseHotelDataSet.xsc">
       <DependentUpon>DatabaseHotelDataSet.xsd</DependentUpon>
@@ -111,9 +123,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="Data\DatabaseHotel.mdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -122,6 +132,14 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>DatabaseHotel.mdf</DependentUpon>
     </Content>
+    <None Include="Resources\img-deliver-truck.png" />
+    <None Include="Resources\img-bottle.png" />
+    <None Include="Resources\img-room.png" />
+    <None Include="Resources\img-buy.png" />
+    <None Include="Resources\img_employee.png" />
+    <None Include="Resources\img_customer.png" />
+    <None Include="Resources\img_phone2.png" />
+    <None Include="Resources\img_phone.png" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
