--- a/Savage Hotel System/Savage Hotel System/Savage Hotel System.csproj
+++ b/Savage Hotel System/Savage Hotel System/Savage Hotel System.csproj
@@ -62,6 +62,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class\DataGridViewDateTimeColumn.cs" />
     <Compile Include="Class\Funcoes.cs" />
     <Compile Include="DatabaseHotelDataSet.cs">
       <DependentUpon>DatabaseHotelDataSet.xsd</DependentUpon>
@@ -233,6 +234,11 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>DatabaseHotel.mdf</DependentUpon>
     </Content>
+    <Content Include="Resources\apply.png" />
+    <None Include="Resources\delete1.png" />
+    <None Include="Resources\apply1.png" />
+    <None Include="Resources\apply2.png" />
+    <Content Include="Resources\delete.png" />
     <None Include="Resources\Quarto_lista.png" />
     <None Include="Resources\Quarto_busca.png" />
     <None Include="Resources\Quarto_add.png" />
