--- a/Savage Hotel System/Savage Hotel System/Savage Hotel System.csproj
+++ b/Savage Hotel System/Savage Hotel System/Savage Hotel System.csproj
@@ -87,12 +87,27 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DatabaseHotelDataSet3.xsd</DependentUpon>
     </Compile>
+    <Compile Include="DataSet\DataSetFuncionario.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DataSetFuncionario.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="DataSet\DataSetQuarto.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DataSetQuarto.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Data\DataBase.cs" />
     <Compile Include="Models\Employee.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Views\Cli_List.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\Cli_List.Designer.cs">
+    <Compile Include="Views\Cli_List.designer.cs">
       <DependentUpon>Cli_List.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\Cli_Menu.cs">
@@ -110,8 +125,14 @@
     <Compile Include="Views\Fornecedor_List.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\Fornecedor_List.Designer.cs">
+    <Compile Include="Views\Fornecedor_List.designer.cs">
       <DependentUpon>Fornecedor_List.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Produto_Menu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Produto_Menu.Designer.cs">
+      <DependentUpon>Produto_Menu.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\Quarto_Cadastro.cs">
       <SubType>Form</SubType>
@@ -169,16 +190,29 @@
     <Compile Include="Views\MenuMain.Designer.cs">
       <DependentUpon>MenuMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\Quarto_List.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Quarto_List.Designer.cs">
+      <DependentUpon>Quarto_List.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Reserva_Quartos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Reserva_Quartos.Designer.cs">
+      <DependentUpon>Reserva_Quartos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Reserva_Menu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Reserva_Menu.Designer.cs">
+      <DependentUpon>Reserva_Menu.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <EmbeddedResource Include="Views\Cli_List.resx">
       <DependentUpon>Cli_List.cs</DependentUpon>
     </EmbeddedResource>
@@ -190,6 +224,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Fornecedor_List.resx">
       <DependentUpon>Fornecedor_List.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Produto_Menu.resx">
+      <DependentUpon>Produto_Menu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Quarto_Cadastro.resx">
       <DependentUpon>Quarto_Cadastro.cs</DependentUpon>
@@ -217,6 +254,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\MenuMain.resx">
       <DependentUpon>MenuMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Quarto_List.resx">
+      <DependentUpon>Quarto_List.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Reserva_Quartos.resx">
+      <DependentUpon>Reserva_Quartos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Reserva_Menu.resx">
+      <DependentUpon>Reserva_Menu.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="DatabaseHotelDataSet.xsc">
       <DependentUpon>DatabaseHotelDataSet.xsd</DependentUpon>
@@ -262,6 +308,28 @@
     <None Include="DatabaseHotelDataSet3.xss">
       <DependentUpon>DatabaseHotelDataSet3.xsd</DependentUpon>
     </None>
+    <None Include="DataSet\DataSetFuncionario.xsc">
+      <DependentUpon>DataSetFuncionario.xsd</DependentUpon>
+    </None>
+    <None Include="DataSet\DataSetFuncionario.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DataSetFuncionario.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="DataSet\DataSetFuncionario.xss">
+      <DependentUpon>DataSetFuncionario.xsd</DependentUpon>
+    </None>
+    <None Include="DataSet\DataSetQuarto.xsc">
+      <DependentUpon>DataSetQuarto.xsd</DependentUpon>
+    </None>
+    <None Include="DataSet\DataSetQuarto.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DataSetQuarto.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="DataSet\DataSetQuarto.xss">
+      <DependentUpon>DataSetQuarto.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -285,6 +353,10 @@
       <DependentUpon>DatabaseHotel.mdf</DependentUpon>
     </Content>
     <Content Include="Resources\apply.png" />
+    <None Include="Resources\Produto_lista.png" />
+    <None Include="Resources\Produto_busca.png" />
+    <None Include="Resources\Produto_add.png" />
+    <None Include="Resources\Produto.png" />
     <None Include="Resources\delete2.png" />
     <None Include="Resources\delete1.png" />
     <None Include="Resources\apply1.png" />
