--- a/Savage Hotel System/Savage Hotel System/Savage Hotel System.csproj
+++ b/Savage Hotel System/Savage Hotel System/Savage Hotel System.csproj
@@ -128,6 +128,12 @@
     <Compile Include="Views\Fornecedor_List.designer.cs">
       <DependentUpon>Fornecedor_List.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\Func_Busc.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Func_Busc.Designer.cs">
+      <DependentUpon>Func_Busc.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\Produto_Menu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -224,6 +230,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Fornecedor_List.resx">
       <DependentUpon>Fornecedor_List.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Func_Busc.resx">
+      <DependentUpon>Func_Busc.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Produto_Menu.resx">
       <DependentUpon>Produto_Menu.cs</DependentUpon>
@@ -353,6 +362,9 @@
       <DependentUpon>DatabaseHotel.mdf</DependentUpon>
     </Content>
     <Content Include="Resources\apply.png" />
+    <None Include="Resources\edit.png" />
+    <None Include="Resources\search1.png" />
+    <None Include="Resources\search.png" />
     <None Include="Resources\Produto_lista.png" />
     <None Include="Resources\Produto_busca.png" />
     <None Include="Resources\Produto_add.png" />
