--- a/Savage Hotel System/Savage Hotel System/Savage Hotel System.csproj
+++ b/Savage Hotel System/Savage Hotel System/Savage Hotel System.csproj
@@ -169,6 +169,12 @@
     <Compile Include="Views\Func_Busc.Designer.cs">
       <DependentUpon>Func_Busc.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\Reserva_Busca.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Reserva_Busca.Designer.cs">
+      <DependentUpon>Reserva_Busca.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\Reserva_List.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -316,6 +322,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Func_Busc.resx">
       <DependentUpon>Func_Busc.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Reserva_Busca.resx">
+      <DependentUpon>Reserva_Busca.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Reserva_List.resx">
       <DependentUpon>Reserva_List.cs</DependentUpon>
