--- a/Savage Hotel System/Savage Hotel System/Savage Hotel System.csproj
+++ b/Savage Hotel System/Savage Hotel System/Savage Hotel System.csproj
@@ -140,6 +140,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DataSetQuarto.xsd</DependentUpon>
     </Compile>
+    <Compile Include="DataSet\DataSetReserva.cs">
+      <DependentUpon>DataSetReserva.xsd</DependentUpon>
+    </Compile>
     <Compile Include="DataSet\DataSetReserva.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -340,6 +343,12 @@
     <Compile Include="Views\Reserva_Pedidos.Designer.cs">
       <DependentUpon>Reserva_Pedidos.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\Reserva_Pedidos_Lista.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Reserva_Pedidos_Lista.Designer.cs">
+      <DependentUpon>Reserva_Pedidos_Lista.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
@@ -437,6 +446,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Reserva_Pedidos.resx">
       <DependentUpon>Reserva_Pedidos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Reserva_Pedidos_Lista.resx">
+      <DependentUpon>Reserva_Pedidos_Lista.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="DatabaseHotelDataSet.xsc">
       <DependentUpon>DatabaseHotelDataSet.xsd</DependentUpon>
